# pennylane-lightning

./: .clang-format  .coveragerc  .git-blame-ignore-revs  .gitignore  .gitignore.swp  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  STLs.txt  codecov.yml  lightning_benchmark.ipynb  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt  run-build.sh  run_command.sh  run_sh.sh  script.sh  setup.py  test.py  test_script.sh  tests_linux_x86_mpi.yml
doc/: conf.py  (+14 more)
examples/: .gitignore  CMakeLists.txt  README.md  gate_benchmark.cpp  gate_benchmark_oplist.cpp  gate_benchmark_plotter.py  run_cleanup.sh  run_gate_benchmark.sh
gpubind/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  main.py  pyproject.toml  setup.py
gpubind/gpu_binding_example/: __init__.py
gpubind/src/: bindings.cpp  kernels.cu  tensor.cpp  tensor.hpp
jzaia_files/: CMakeLists.txt  grover.py  main.cpp
pennylane_lightning/core/bindings/: Bindings.cpp  Bindings.hpp  BindingsBase.hpp  BindingsCudaUtils.hpp  BindingsCudaUtils_nb.cpp  BindingsCudaUtils_nb.hpp  BindingsMPI.hpp  BindingsMPI_nb.hpp  BindingsTensor_nb.hpp  BindingsUtils.hpp  BindingsUtils_nb.hpp  Bindings_nb.cpp  Bindings_nb.hpp  CMakeLists.txt  NanobindBindings.cpp
pennylane_lightning/core/catalyst/: CMakeLists.txt  LightningQubitManager.hpp
pennylane_lightning/core/simulators/: CMakeLists.txt
pennylane_lightning/core/src/: CMakeLists.txt  lightning.cpp  lightning.kokkos.toml  lightning.qubit.toml  lightning_gpu.toml  lightning_kokkos.toml  lightning_qubit.toml  lk-mpi-bandwidthtest.cpp  lk-mpi-memcpytest.cpp  lk-mpi-swaptest.cpp  memcpytest.cpp  output_utils.hpp
pennylane_lightning/src/: .clang-tidy  .gitignore  Apply.cpp  Apply.hpp  Bindings.cpp  CMakeLists.txt  GateFactory.cpp  Gates.cpp  Gates.hpp  Makefile  Optimize.cpp  Optimize.hpp  PyBind.cpp  Standalone.hpp  StateVector.cpp  StateVector.hpp  Util.cpp  Util.hpp  binding.cpp  lightning_qubit.cpp  lightning_qubit.hpp  lightning_qubit_ops.cpp  operations.cpp  operations.hpp  prototyping.py  statistics.cpp  statistics.hpp  tags  typedefs.hpp
pennylane_lightning/src/algorithms/: AdjointDiff.cpp  AdjointDiff.hpp  AlgUtil.hpp  CMakeLists.txt  ConstructHamiltonian.hpp  Expval.hpp  JacobianProd.cpp  JacobianProd.hpp  JacobianTape.cpp  JacobianTape.hpp  Observables.cpp  Observables.hpp  StateVecAdjDiff.cpp  StateVecAdjDiff.hpp  StateVecAdjJac.hpp  Tape.cpp  Tape.hpp
pennylane_lightning/src/benchmarks/: AllOperations.hpp  Bench_AllGates.cpp  Bench_AllGenerators.cpp  Bench_ApplyHCNOT.cpp  Bench_ApplyMultiRZ.cpp  Bench_ApplyMyImpl.cpp  Bench_ApplyOperations.cpp  Bench_BitUtil.cpp  Bench_Gate.cpp  Bench_Kernels.cpp  Bench_LinearAlgebra.cpp  Bench_Utils.hpp  CMakeLists.txt  README.md  benchmark_all.sh  compiler_info.in  plot_gate_benchmark.py  results_macbook.txt
pennylane_lightning/src/bindings/: Bindings.cpp  Bindings.hpp  ExternDefinitions.hpp
pennylane_lightning/src/examples/: CMakeLists.txt  ExampleUtil.hpp  benchmark_gate.cpp  benchmark_gate_list.cpp  benchmark_generator.cpp  benchmark_matrix.cpp  benchmark_multi_rz.cpp  benchmark_operation.cpp  compiler_info.in  gate_benchmark.cpp  gate_benchmark_oplist.cpp  gate_benchmark_plotter.py  plot_benchmark.py  plot_gate_benchmark.py  requirements.txt  run_benchmark.py  run_benchmark.sh  run_gate_benchmark.sh  test.sh
pennylane_lightning/src/gates/: AvailableKernels.hpp  CMakeLists.txt  Constant.hpp  DynamicDispatcher.cpp  DynamicDispatcher.hpp  GateImplementationsLM.hpp  GateImplementationsPI.hpp  GateOperation.hpp  GateUtil.cpp  GateUtil.hpp  Gates.hpp  KernelType.hpp  MyGateImplementation.hpp  OpToMemberFuncPtr.hpp  PauliGenerator.hpp  RegisterKernel.hpp  RegisterKernelsAVX2.cpp  RegisterKernelsDefault.cpp  RegisterKernels_AVX512.cpp  RegisterKernels_Default.cpp  RegisterKernels_x64.cpp  RegisterKernels_x64.hpp  SelectKernel.hpp
pennylane_lightning/src/rework/: Apply.cpp  Apply.hpp  GateFactory.cpp  GateFactory.hpp  Gates.cpp  Gates.hpp  StateVector.cpp  StateVector.hpp  Util.cpp  Util.hpp  typedefs.hpp
pennylane_lightning/src/simulator/: ApplyOperations.hpp  AssignKernelMap_AVX2.cpp  AssignKernelMap_AVX2.hpp  AssignKernelMap_AVX512.cpp  AssignKernelMap_AVX512.hpp  AssignKernelMap_Default.cpp  AssignKernelMap_Default.hpp  AvailableKernels.hpp  CMakeLists.txt  CPUMemoryModel.hpp  Constant.hpp  DefaultKernels.hpp  DefaultKernelsForStateVector.hpp  DispatchKeys.hpp  DynamicDispatcher.cpp  DynamicDispatcher.hpp  GateImplementationsLM.hpp  GateImplementationsPI.hpp  GateOperation.hpp  GateOperations.hpp  GateOperationsLM.hpp  GateOperationsPI.hpp  Gates.hpp  IndicesUtil.cpp  IndicesUtil.hpp  IndiciesManager.hpp  IndiciesUtils.hpp  KernelMap.cpp  KernelMap.hpp  KernelMap_Default.cpp  KernelMap_X64.cpp  KernelType.hpp  Measures.cpp  Measures.hpp  Observables.cpp  Observables.hpp  OpToMemberFuncPtr.hpp  OperationToMemberFuncPtr.hpp  PauliGenerator.hpp  SamplerTemp.cpp  (+22 more)
pennylane_lightning/src/tests/: .clang-tidy  CMakeLists.txt  CompareVector.hpp  CreateAllWires.cpp  CreateAllWires.hpp  GateData.h  GateData.hpp  Makefile  README.md  TestAvailableKernels.hpp  TestConstant.hpp  TestHelpers.hpp  TestKernels.hpp  TestMacros.hpp  Test_AVXSingleQubitGateHelpers.cpp  Test_AVXTwoQubitGateHelpers.cpp  Test_AdjDiff.cpp  Test_AlgUtil.cpp  Test_Cache.cpp  Test_CompilerSupport.cpp  Test_Constant.cpp  Test_DefaultKernelsForStateVector.cpp  Test_DynamicDispatcher.cpp  Test_Error.cpp  Test_GateImplementations_CompareKernels.cpp  Test_GateImplementations_Generator.cpp  Test_GateImplementations_Inverse.cpp  Test_GateImplementations_Matrix.cpp  Test_GateImplementations_Nonparam.cpp  Test_GateImplementations_Param.cpp  Test_GateOperations.cpp  Test_GateOperations_Nonparam.cpp  Test_GateOperations_Param.cpp  Test_GateOperations_Single_Nonparam.cpp  Test_GateOperations_Single_Param.cpp  Test_GateOperations_Two_Nonparam.cpp  Test_GateOperations_Two_Param.cpp  Test_GateUtil.cpp  Test_IndicesUtil.cpp  Test_Internal.cpp  (+37 more)
(+1371 files in other folders)
