[build-system]
requires = ["cmake", "ninja; platform_system!='Windows'", "setuptools>=75.8.1", "tomli"]
build-backend = "setuptools.build_meta"

[project]
name = "pennylane_lightning_kokkos"
description = "PennyLane-Lightning plugin"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [ 
    "Development Status :: 4 - Beta", 
    "Environment :: Console", 
    "Intended Audience :: Science/Research", 
    "Natural Language :: English", 
    "Operating System :: MacOS :: MacOS X", 
    "Operating System :: POSIX", 
    "Operating System :: POSIX :: Linux", 
    "Programming Language :: Python", 
    "Programming Language :: Python :: 3", 
    "Programming Language :: Python :: 3 :: Only", 
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12", 
    "Programming Language :: Python :: 3.13", 
    "Programming Language :: Python :: 3.14", 
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["pennylane>=0.42", "scipy-openblas32>=0.3.26", "pennylane_lightning==0.44.0-dev22"]
dynamic = [ "version",]
[[project.maintainers]]
name = "Xanadu Quantum Technologies Inc."
email = "software@xanadu.ai"

[project.optional-dependencies]
kokkos = [ "pennylane-lightning-kokkos",]
amdgpu = [ "pennylane-lightning-amdgpu",]
gpu = [ "pennylane-lightning-gpu",]
tensor = [ "pennylane-lightning-tensor",]

[project.urls]
Homepage = "https://github.com/PennyLaneAI/pennylane-lightning"

[project.entry-points."pennylane.plugins"]
"lightning.kokkos" = "pennylane_lightning.lightning_kokkos:LightningKokkos"

[tool.bandit]
targets = "pennylane_lightning"
exclude_dirs = ["tests"]
skips = [
    "B101", # We are okay with using asserts in source code as we do not compile optimized bytecode of pennylane
]
